--- a/.github/workflows/tutorial.yml
+++ b/.github/workflows/tutorial.yml
@@ -2,9 +2,9 @@ name: Tutorial
 on: workflow_dispatch
 jobs: 
   first_job:
-    runs-on: ubuntulatest
+    runs-on: ubuntu-latest
     steps:
       - name: Print Greeting
-      - run: echo "Hello World!"
+        run: echo "Hello World!"
       - name: Print Goodby
         run: echo "Done - bye!"
