--- a/.github/workflows/tutorial.yml
+++ b/.github/workflows/tutorial.yml
@@ -1,4 +1,4 @@
-name: Test Project
+name: Run Tests
 on: push
 jobs: 
   first_job:
@@ -13,5 +13,5 @@ jobs:
       - name: Install dependecies
         run:  npm ci
       - name: Run tests
-        rum: npm test
+        run: npm test
       
