--- a/.github/workflows/Default Template.yml
+++ b/.github/workflows/Default Template.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Example
+name: Default Template
 
 # Controls when the workflow will run
 on:
