adding deploy step

--- a/.github/workflows/tutorial.yml
+++ b/.github/workflows/tutorial.yml
@@ -1,7 +1,7 @@
-name: Test Project
+name: Deploy Project
 on: push
 jobs: 
-  first_job:
+  test:
     runs-on: ubuntu-latest
     steps:
       - name: Get code
@@ -9,9 +9,23 @@ jobs:
       - name: Install NodeJs
         uses: actions/setup-node@v3
         with:
-          node-version: '18'
+          node-version: 18
       - name: Install dependecies
         run:  npm ci
       - name: Run tests
-        rum: npm test
-      
+        run: npm test
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Get code
+        uses: actions/checkout@v3
+      - name: Install NodeJs
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+      - name: Install dependecies
+        run:  npm ci
+      - name: Build project
+        run: npm run build
+      - name: Deploy
+        run: echo "Deploying..."
