--- a/.github/workflows/first_test.yml
+++ b/.github/workflows/first_test.yml
@@ -5,7 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     steps: 
       - name: Run Lint
-        uses: actions/lint-action@v2
+        uses: wearerequired/lint-action@v2
   test:
     runs-on: ubuntu-latest
     steps:
