--- a/.github/workflows/first_test.yml
+++ b/.github/workflows/first_test.yml
@@ -4,6 +4,8 @@ jobs:
   lint:
     runs-on: ubuntu-latest
     steps: 
+      - name: Get code
+        uses: actions/checkout@v3
       - name: Run Lint
         uses: wearerequired/lint-action@v2
         with:
