--- a/.github/workflows/first_test.yml
+++ b/.github/workflows/first_test.yml
@@ -6,6 +6,8 @@ jobs:
     steps: 
       - name: Get code
         uses: actions/checkout@v3
+      - name: Install ESLint
+        run: npm init @eslint/config
       - name: Run Lint
         uses: wearerequired/lint-action@v2
         with:
