--- a/.github/workflows/first_test.yml
+++ b/.github/workflows/first_test.yml
@@ -6,10 +6,8 @@ jobs:
     steps: 
       - name: Get code
         uses: actions/checkout@v3
-      - name: Install Modules
-        run: yarn
-      - name: Run ESLint
-        run: eslint . --ext .js,.jsx,.ts,.tsx
+      - name: Install Packages
+        run: npm ci
       - name: Run Lint
         uses: wearerequired/lint-action@v2
         with:
