--- a/.github/workflows/first_test.yml
+++ b/.github/workflows/first_test.yml
@@ -15,6 +15,8 @@ jobs:
     steps:
       - name: Get code
         uses: actions/checkout@v3
+      - name: Install Packages
+        run: npm ci
       - name: Run Tests
         run: npm run test
   build:
